fix: list rendering on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,10 +9,6 @@
   border-radius: 50%;
 }
 
-/* .fa:hover { */
-/*   opacity: 0.7; */
-/* } */
-
 .fa-linkedin {
   background: #0077B5;
   color: white;
@@ -43,13 +39,22 @@ ul {
 }
 
 @media only screen and (max-width: 767px) {
-  #exp ul {
-    grid-template-columns: repeat(2, minmax(0, 2fr));
+  #research ul {
+    grid-template-columns: 1fr;
+    gap: 1.5rem;
+  }
+  #open-source ul {
+    grid-template-columns: 1fr;
+    gap: 1.5rem;
   }
 }
 
 @media screen and (max-width: 639px) {
-  #exp ul {
+  #research ul {
+    grid-template-columns: 1fr;
+    gap: 1.5rem;
+  }
+  #open-source ul {
     grid-template-columns: 1fr;
     gap: 1.5rem;
   }
