--- a/styles/style_out.css
+++ b/styles/style_out.css
@@ -919,12 +919,6 @@ video {
   border-radius: 50%;
 }
 
-/* .fa:hover { */
-
-/*   opacity: 0.7; */
-
-/* } */
-
 .fa-linkedin {
   background: #0077B5;
   color: white;
@@ -956,13 +950,24 @@ ul {
 }
 
 @media only screen and (max-width: 767px) {
-  #exp ul {
-    grid-template-columns: repeat(2, minmax(0, 2fr));
+  #research ul {
+    grid-template-columns: 1fr;
+    gap: 1.5rem;
+  }
+
+  #open-source ul {
+    grid-template-columns: 1fr;
+    gap: 1.5rem;
   }
 }
 
 @media screen and (max-width: 639px) {
-  #exp ul {
+  #research ul {
+    grid-template-columns: 1fr;
+    gap: 1.5rem;
+  }
+
+  #open-source ul {
     grid-template-columns: 1fr;
     gap: 1.5rem;
   }
